2008-02-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/vec.h: Deprecate set_subvector(i1, i2, &v) and
	replace_mid(i, &v) functions

	These two methods of the Vec class do exactly the same what the
	set_subvector(i, &v) function does. Therefore it seems to be a
	good idea to mark them as deprecated for possible removal from
	future major releases of IT++.

2008-02-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/modulator.h: Remove the deprecated
	demodulate_soft_bits_approx() functions

	Since IT++ 3.99.0 was releases, these functions have been marked
	as deprecated. The demodulate_soft_bits() functions should be used
	instead. This patch removes them from the current development
	branch.

	* itpp/base/mat.cpp, itpp/base/mat.h, tests/mat_test.cpp,
	tests/mat_test.ref: Remove the deprecated multiplication operator

	The multiplication operator of a vector times a matrix with only one
	row was marked as deprecated in the current stable branch (itpp-4-0).
	Its functionality is identical to the outer_product of two vectors.
	It is time to remove it from our development branch.

-------------------------------------------------------------------------------

2008-02-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* IT++ 4.0.3 released (SVN tag: release-4-0-3)

	* NEWS, VERSION: Release notes added and version number updated
	for IT++ 4.0.3

	* itpp/base/vec.h: Minor documentation fixes to prevent warnings
	of the Doxygen

2008-02-20  Adam Piatyszek  <ediap@users.sourceforge.net>

	* INSTALL, doc/local/installation.doc, itpp/base/blas.h,
	itpp/base/vec.cpp, itpp/base/vec.h, itpp/config_msvc.h,
	m4/acx_blas.m4: Removed non-portable "--with-zdotu=complex" method

	It seems that there is no portable solution for calling from C++
	the Fortran functions that returns a complex value. C99 introduces
	"double _Complex" type, which is compatible with Fortran COMPLEX.
	But this C99 type is not a valid C++ type. Therefore this patch